Added purchase controller and views.

--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controllers\CarColorController.cs" />
     <Compile Include="Controllers\ConfigController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PurchaseController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -149,6 +150,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\CarStoreDb.mdf" />
+    <Content Include="App_Data\CarStoreDb_log.ldf">
+      <DependentUpon>CarStoreDb.mdf</DependentUpon>
+    </Content>
     <Content Include="App_Images\LogoImg.png" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -193,10 +198,13 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Config\Index.cshtml" />
     <Content Include="Views\Config\Details.cshtml" />
+    <Content Include="Views\Purchase\Index.cshtml" />
+    <Content Include="Views\Purchase\Details.cshtml" />
+    <Content Include="Views\Purchase\Create.cshtml" />
+    <Content Include="Views\Purchase\Edit.cshtml" />
+    <Content Include="Views\Purchase\Delete.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
