--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -155,6 +155,7 @@
       <DependentUpon>CarStoreDb.mdf</DependentUpon>
     </Content>
     <Content Include="App_Images\LogoImg.png" />
+    <Content Include="App_Images\RenaulLogo.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
