--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -154,14 +154,19 @@
     <Content Include="App_Data\CarStoreDb_log.ldf">
       <DependentUpon>CarStoreDb.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Images\audi-logo.png" />
+    <Content Include="App_Images\duster-small-icon.jpg" />
     <Content Include="App_Images\font.jpg" />
-    <Content Include="App_Images\LogoImg.png" />
-    <Content Include="App_Images\Renault-logo.png" />
+    <Content Include="App_Images\MainLogo.png" />
+    <Content Include="App_Images\megane-small-icon.jpg" />
+    <Content Include="App_Images\renault-logo.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\ViewsCSS\BrandDetails.css" />
     <Content Include="Content\ViewsCSS\BrandIndex.css" />
+    <Content Include="Content\ViewsCSS\CarModelDetails.css" />
     <Content Include="Content\ViewsCSS\CarModelIndex.css" />
     <Content Include="Content\ViewsCSS\HomeIndex.css" />
     <Content Include="Content\ViewsCSS\_Layout.css" />
