--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -161,7 +161,16 @@
     <Compile Include="Models\Purchase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BrandRepository.cs" />
+    <Compile Include="Repositories\CarColorRepository.cs" />
+    <Compile Include="Repositories\CarModelRepository.cs" />
+    <Compile Include="Repositories\ConfigRepository.cs" />
     <Compile Include="Repositories\IBrandRepository.cs" />
+    <Compile Include="Repositories\ICarColorRepository.cs" />
+    <Compile Include="Repositories\ICarModelRepository.cs" />
+    <Compile Include="Repositories\IConfigRepository.cs" />
+    <Compile Include="Repositories\IPurchaseRepository.cs" />
+    <Compile Include="Repositories\PurchaseRepository.cs" />
+    <Compile Include="Util\NinjectRegistration.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\CarStoreDb.mdf" />
