--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\CarColorController.cs" />
     <Compile Include="Controllers\ConfigController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PurchaseBuildController.cs" />
     <Compile Include="Controllers\PurchaseController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -167,7 +168,6 @@
     <Compile Include="Models\CarStoreContext.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Purchase.cs" />
-    <Compile Include="Models\TempPurchase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BrandRepository.cs" />
     <Compile Include="Repositories\CarColorRepository.cs" />
@@ -179,6 +179,8 @@
     <Compile Include="Repositories\IConfigRepository.cs" />
     <Compile Include="Repositories\IPurchaseRepository.cs" />
     <Compile Include="Repositories\PurchaseRepository.cs" />
+    <Compile Include="Services\IPurchaseService.cs" />
+    <Compile Include="Services\PurchaseService.cs" />
     <Compile Include="Util\NinjectRegistration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -257,7 +259,9 @@
     <Content Include="Views\Purchase\Delete.cshtml" />
     <Content Include="Views\Purchase\Create.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\PurchaseBiuld\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
