--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -145,7 +145,7 @@
     <Compile Include="Controllers\CarTypeController.cs" />
     <Compile Include="Controllers\ConfigController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\PurchaseBuildController.cs" />
+    <Compile Include="Controllers\IdSaverController.cs" />
     <Compile Include="Controllers\PurchaseController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -186,6 +186,7 @@
     <Compile Include="Models\CarType.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Purchase.cs" />
+    <Compile Include="ServiceModels\SavedId.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BrandRepository.cs" />
     <Compile Include="Repositories\CarColorRepository.cs" />
@@ -201,6 +202,8 @@
     <Compile Include="Repositories\PurchaseRepository.cs" />
     <Compile Include="Services\CarSortService.cs" />
     <Compile Include="Services\ICarSortService.cs" />
+    <Compile Include="Services\IdSaverService.cs" />
+    <Compile Include="Services\IIdSaverService.cs" />
     <Compile Include="Services\IPurchaseService.cs" />
     <Compile Include="Services\PurchaseService.cs" />
     <Compile Include="Util\NinjectRegistration.cs" />
