--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Controllers\BrandController.cs" />
     <Compile Include="Controllers\CarModelController.cs" />
     <Compile Include="Controllers\CarColorController.cs" />
+    <Compile Include="Controllers\CarTypeController.cs" />
     <Compile Include="Controllers\ConfigController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PurchaseBuildController.cs" />
@@ -174,16 +175,19 @@
     <Compile Include="Models\CarModel.cs" />
     <Compile Include="Models\CarColor.cs" />
     <Compile Include="Models\CarStoreContext.cs" />
+    <Compile Include="Models\CarType.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Purchase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BrandRepository.cs" />
     <Compile Include="Repositories\CarColorRepository.cs" />
     <Compile Include="Repositories\CarModelRepository.cs" />
+    <Compile Include="Repositories\CarTypeRepository.cs" />
     <Compile Include="Repositories\ConfigRepository.cs" />
     <Compile Include="Repositories\IBrandRepository.cs" />
     <Compile Include="Repositories\ICarColorRepository.cs" />
     <Compile Include="Repositories\ICarModelRepository.cs" />
+    <Compile Include="Repositories\ICarTypeRepository.cs" />
     <Compile Include="Repositories\IConfigRepository.cs" />
     <Compile Include="Repositories\IPurchaseRepository.cs" />
     <Compile Include="Repositories\PurchaseRepository.cs" />
@@ -267,6 +271,7 @@
     <Content Include="Views\Purchase\Edit.cshtml" />
     <Content Include="Views\Purchase\Delete.cshtml" />
     <Content Include="Views\Purchase\Create.cshtml" />
+    <Content Include="Views\CarType\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
