Added Html and Css for sevetsl views.

--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -201,17 +201,41 @@
       <DependentUpon>CarStoreDb.mdf</DependentUpon>
     </Content>
     <Content Include="App_Images\audi-logo.png" />
-    <Content Include="App_Images\duster-small-icon.jpg" />
+    <Content Include="App_Images\audi-Q-7-cfg-base.png" />
+    <Content Include="App_Images\audi-Q-7-cfg-comfort.png" />
+    <Content Include="App_Images\audi-Q-7-cfg-premium.png" />
+    <Content Include="App_Images\audi-Q-7-inside.jpg" />
+    <Content Include="App_Images\audi-Q-7-small-icon.png" />
+    <Content Include="App_Images\audi-Q-7-view-3.jpg" />
+    <Content Include="App_Images\audi-RS-7-cfg-base.png" />
+    <Content Include="App_Images\audi-RS-7-cfg-comfort.png" />
+    <Content Include="App_Images\audi-RS-7-cfg-premium.png" />
+    <Content Include="App_Images\audi-RS-7-inside-1.jpg" />
+    <Content Include="App_Images\audi-RS-7-small-icon.png" />
+    <Content Include="App_Images\audi-RS-7-view-1.jpg" />
+    <Content Include="App_Images\audi-RS-7-view-2.jpg" />
+    <Content Include="App_Images\comercial-small-img.jpg" />
+    <Content Include="App_Images\crossowers-small-img.jpg" />
+    <Content Include="App_Images\renault-duster-cfg-intense.jpg" />
+    <Content Include="App_Images\renault-duster-cfg-life.jpg" />
+    <Content Include="App_Images\renault-duster-cfg-zen.jpg" />
+    <Content Include="App_Images\renault-duster-inside-2 %282%29.jpg" />
+    <Content Include="App_Images\renault-duster-small-icon.jpg" />
     <Content Include="App_Images\font.jpg" />
     <Content Include="App_Images\MainLogo.png" />
-    <Content Include="App_Images\megane-small-icon.jpg" />
+    <Content Include="App_Images\renault-megane-cfg-intense.jpg" />
+    <Content Include="App_Images\renault-megane-cfg-life.jpg" />
+    <Content Include="App_Images\renault-megane-cfg-zen.jpg" />
+    <Content Include="App_Images\renault-megane-small-icon.jpg" />
+    <Content Include="App_Images\audi-Q-7-view-1.jpg" />
+    <Content Include="App_Images\audi-Q-7-view-2.jpg" />
     <Content Include="App_Images\renault-duster-inside-1.jpg" />
-    <Content Include="App_Images\renault-duster-inside-2.jpg" />
     <Content Include="App_Images\renault-duster-view.jpg" />
     <Content Include="App_Images\renault-logo.jpg" />
     <Content Include="App_Images\renault-megane-inside-1.jpg" />
     <Content Include="App_Images\renault-megane-inside-2.jpg" />
     <Content Include="App_Images\renault-megane-view.jpg" />
+    <Content Include="App_Images\sedans-small-img.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -220,6 +244,7 @@
     <Content Include="Content\ViewsCSS\BrandIndex.css" />
     <Content Include="Content\ViewsCSS\CarModelDetails.css" />
     <Content Include="Content\ViewsCSS\CarModelIndex.css" />
+    <Content Include="Content\ViewsCSS\CarTypeIndex.css" />
     <Content Include="Content\ViewsCSS\ColorDetails.css" />
     <Content Include="Content\ViewsCSS\ColorIndex.css" />
     <Content Include="Content\ViewsCSS\ConfigDetails.css" />
