Added 3 new cars.

--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -223,6 +223,27 @@
     <Content Include="App_Images\renault-duster-small-icon.jpg" />
     <Content Include="App_Images\font.jpg" />
     <Content Include="App_Images\MainLogo.png" />
+    <Content Include="App_Images\renault-kadjar-cfg-intense.jpg" />
+    <Content Include="App_Images\renault-kadjar-cfg-life.jpg" />
+    <Content Include="App_Images\renault-kadjar-cfg-zen.jpg" />
+    <Content Include="App_Images\renault-kadjar-inside-1.jpg" />
+    <Content Include="App_Images\renault-kadjar-inside-2.jpg" />
+    <Content Include="App_Images\renault-kadjar-small-icon.jpg" />
+    <Content Include="App_Images\renault-kadjar-view-1.jpg" />
+    <Content Include="App_Images\renault-koleos-cfg-intense.jpg" />
+    <Content Include="App_Images\renault-koleos-cfg-life.jpg" />
+    <Content Include="App_Images\renault-koleos-cfg-zen.jpg" />
+    <Content Include="App_Images\renault-koleos-inside-1.jpg" />
+    <Content Include="App_Images\renault-koleos-inside-2.jpg" />
+    <Content Include="App_Images\renault-koleos-small-icon.jpg" />
+    <Content Include="App_Images\renault-koleos-view-1.jpg" />
+    <Content Include="App_Images\renault-logan-cfg-life-pl.jpg" />
+    <Content Include="App_Images\renault-logan-cfg-life.jpg" />
+    <Content Include="App_Images\renault-logan-cfg-zen.jpg" />
+    <Content Include="App_Images\renault-logan-inside-1.jpg" />
+    <Content Include="App_Images\renault-logan-inside-2.jpg" />
+    <Content Include="App_Images\renault-logan-small-icon.jpg" />
+    <Content Include="App_Images\renault-logan-view-1.jpg" />
     <Content Include="App_Images\renault-megane-cfg-intense.jpg" />
     <Content Include="App_Images\renault-megane-cfg-life.jpg" />
     <Content Include="App_Images\renault-megane-cfg-zen.jpg" />
