Added 4 new cars.

--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -200,20 +200,48 @@
     <Content Include="App_Data\CarStoreDb_log.ldf">
       <DependentUpon>CarStoreDb.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Images\audi-A-6-cfg-base.png" />
+    <Content Include="App_Images\audi-A-6-cfg-comfort.png" />
+    <Content Include="App_Images\audi-A-6-cfg-premium.png" />
+    <Content Include="App_Images\audi-A-6-inside-1.jpeg" />
+    <Content Include="App_Images\audi-A-6-small-icon.png" />
+    <Content Include="App_Images\audi-A-6-view-1.jpg" />
+    <Content Include="App_Images\audi-A-6-view-2.jpg" />
+    <Content Include="App_Images\audi-A-7-inside-1.jpeg" />
+    <Content Include="App_Images\audi-A-7-view-1%282%29.jpg" />
+    <Content Include="App_Images\audi-A-7-view-2%282%29.jpg" />
+    <Content Include="App_Images\audi-A-8-cfg-base.png" />
+    <Content Include="App_Images\audi-A-8-cfg-comfort.png" />
+    <Content Include="App_Images\audi-A-8-cfg-premium.png" />
+    <Content Include="App_Images\audi-A-8-inside-1.jpeg" />
+    <Content Include="App_Images\audi-A-8-small-icon.png" />
+    <Content Include="App_Images\audi-A-8-view-1.jpg" />
+    <Content Include="App_Images\audi-A-8-view-2.jpg" />
     <Content Include="App_Images\audi-logo.png" />
+    <Content Include="App_Images\audi-Q-5-cfg-base.png" />
+    <Content Include="App_Images\audi-Q-5-cfg-comfort.png" />
+    <Content Include="App_Images\audi-Q-5-cfg-premium.png" />
+    <Content Include="App_Images\audi-Q-5-inside-1.jpeg" />
+    <Content Include="App_Images\audi-Q-5-small-icon.png" />
+    <Content Include="App_Images\audi-Q-5-view-1.jpg" />
+    <Content Include="App_Images\audi-Q-5-view-2.jpg" />
     <Content Include="App_Images\audi-Q-7-cfg-base.png" />
     <Content Include="App_Images\audi-Q-7-cfg-comfort.png" />
     <Content Include="App_Images\audi-Q-7-cfg-premium.png" />
     <Content Include="App_Images\audi-Q-7-inside.jpg" />
     <Content Include="App_Images\audi-Q-7-small-icon.png" />
     <Content Include="App_Images\audi-Q-7-view-3.jpg" />
-    <Content Include="App_Images\audi-RS-7-cfg-base.png" />
-    <Content Include="App_Images\audi-RS-7-cfg-comfort.png" />
-    <Content Include="App_Images\audi-RS-7-cfg-premium.png" />
-    <Content Include="App_Images\audi-RS-7-inside-1.jpg" />
-    <Content Include="App_Images\audi-RS-7-small-icon.png" />
-    <Content Include="App_Images\audi-RS-7-view-1.jpg" />
-    <Content Include="App_Images\audi-RS-7-view-2.jpg" />
+    <Content Include="App_Images\audi-A-7-cfg-base.png" />
+    <Content Include="App_Images\audi-A-7-cfg-comfort.png" />
+    <Content Include="App_Images\audi-A-7-cfg-premium.png" />
+    <Content Include="App_Images\audi-A-7-small-icon.png" />
+    <Content Include="App_Images\audi-Q-8-cfg-base.png" />
+    <Content Include="App_Images\audi-Q-8-cfg-comfort.png" />
+    <Content Include="App_Images\audi-Q-8-cfg-premium.png" />
+    <Content Include="App_Images\audi-Q-8-inside-1.jpeg" />
+    <Content Include="App_Images\audi-Q-8-small-icon.png" />
+    <Content Include="App_Images\audi-Q-8-view-1.jpg" />
+    <Content Include="App_Images\audi-Q-8-view-2.jpg" />
     <Content Include="App_Images\comercial-small-img.jpg" />
     <Content Include="App_Images\crossowers-small-img.jpg" />
     <Content Include="App_Images\renault-duster-cfg-intense.jpg" />
