Added 3 new cars.

--- a/CarStore/CarStore.csproj
+++ b/CarStore/CarStore.csproj
@@ -218,6 +218,20 @@
     <Content Include="App_Images\audi-A-8-view-1.jpg" />
     <Content Include="App_Images\audi-A-8-view-2.jpg" />
     <Content Include="App_Images\audi-logo.png" />
+    <Content Include="App_Images\audi-Q-2-cfg-base.png" />
+    <Content Include="App_Images\audi-Q-2-cfg-comfort.png" />
+    <Content Include="App_Images\audi-Q-2-cfg-premium.png" />
+    <Content Include="App_Images\audi-Q-2-inside-1.jpeg" />
+    <Content Include="App_Images\audi-Q-2-small-icon.png" />
+    <Content Include="App_Images\audi-Q-2-view-1.jpg" />
+    <Content Include="App_Images\audi-Q-2-view-2.jpg" />
+    <Content Include="App_Images\audi-Q-3-cfg-base.png" />
+    <Content Include="App_Images\audi-Q-3-cfg-comfort.png" />
+    <Content Include="App_Images\audi-Q-3-cfg-premium.png" />
+    <Content Include="App_Images\audi-Q-3-inside-1.jpeg" />
+    <Content Include="App_Images\audi-Q-3-small-icon.png" />
+    <Content Include="App_Images\audi-Q-3-view-1.jpg" />
+    <Content Include="App_Images\audi-Q-3-view-2.jpg" />
     <Content Include="App_Images\audi-Q-5-cfg-base.png" />
     <Content Include="App_Images\audi-Q-5-cfg-comfort.png" />
     <Content Include="App_Images\audi-Q-5-cfg-premium.png" />
@@ -272,6 +286,13 @@
     <Content Include="App_Images\renault-logan-inside-2.jpg" />
     <Content Include="App_Images\renault-logan-small-icon.jpg" />
     <Content Include="App_Images\renault-logan-view-1.jpg" />
+    <Content Include="App_Images\renault-loganmvc-cfg-base.jpg" />
+    <Content Include="App_Images\renault-loganmvc-cfg-stepwat-zen.jpg" />
+    <Content Include="App_Images\renault-loganmvc-cfg-zen.jpg" />
+    <Content Include="App_Images\renault-loganmvc-inside-1.jpg" />
+    <Content Include="App_Images\renault-loganmvc-inside-2.jpg" />
+    <Content Include="App_Images\renault-loganmvc-small-icon.jpg" />
+    <Content Include="App_Images\renault-loganmvc-view-1.jpg" />
     <Content Include="App_Images\renault-megane-cfg-intense.jpg" />
     <Content Include="App_Images\renault-megane-cfg-life.jpg" />
     <Content Include="App_Images\renault-megane-cfg-zen.jpg" />
